#
# BGASFS/Src/Libs CMakeLists.txt
#
# Copyright (C) 2017-2020 Tactical Computing Laboratories, LLC
# All Rights Reserved
# contact@tactcomplabs.com
#
# See LICENSE in the top level directory for licensing details
#

add_subdirectory(BGASRPC)
add_subdirectory(BGASFSClient)
add_subdirectory(BGASFSConfig)

#-- EOF
